# regional-rail-schedule-generator

./: .flake8  .gitignore  .pylintrc  Makefile  Pipfile  network.py  phase_one.py  pyproject.toml  requirements.txt  scratch.py  setup.cfg  solver.py  test.py
.github/: CODEOWNERS
data/MBTA_GTFS/: calendar.txt  calendar_attributes.txt  calendar_dates.txt  directions.txt  facilities_properties.txt  feed_info.txt  lines.txt  multi_route_trips.txt  pathways.txt  route_patterns.txt  routes.txt  stops.txt  transfers.txt
data/gtfs-phase-one/: calendar.txt  stops.txt  transfers.txt  trips.txt
data/gtfs-present/: agency.txt  areas.txt  calendar.txt  calendar_attributes.txt  calendar_dates.txt  checkpoints.txt  directions.txt  facilities.txt  facilities_properties.txt  fare_leg_rules.txt  fare_media.txt  fare_products.txt  fare_transfer_rules.txt  feed_info.txt  levels.txt  lines.txt  multi_route_trips.txt  pathways.txt  (+8 more)
docs/: README.md
network/: __init__.py  build.py  config.py  load.py  main.py  mbta_gtfs.py  models.py  relevant_stop_times.py  time.py
scenarios/: phase_one.py
scheduler/: departures.py  key_stations.py  network.py  optimize.py  ordering.py  ordering_old.py  ordering_two.py  scheduling_problem.py  service_pattern_graph.py  subgraph.py  subgraph_scheduler.py  takt.py  variables.py
synthesize/: amenities.py  constraint_scheduler.py  definitions.py  distance.py  evaluate.py  infill.py  main.py  naive_scheduler.py  network.py  nsrl_four_track.py  routes.py  scheduler.py  stations.py  time.py  total_route_time.py  trainset.py  util.py  write_gtfs.py
(+51 files in other folders)
